缝缝补补，保持jei版本在15.17.0.74